# tap-datateer-graphql-api

./: .gitignore  CHANGELOG.md  LICENSE  README.md  config.json  meltano.yml  pyproject.toml
.github/workflows/: ci.yml
tap_datateer_graphql_api/: __init__.py  client.py  streams.py  tap.py
tests/: __init__.py  test_core.py
